samples/_failures_safe/1761173571_d0ac44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_700a6bb5.c: In function ‘main’:
./samples/SAFE/__tmp_700a6bb5.c:161:39: error: missing terminating " character
  161 |     printf("%-12s %-15s %-6s %-6s\n", "
      |                                       ^
./samples/SAFE/__tmp_700a6bb5.c:161:5: error: expected expression at end of input
  161 |     printf("%-12s %-15s %-6s %-6s\n", "
      |     ^~~~~~
./samples/SAFE/__tmp_700a6bb5.c:161:5: error: expected declaration or statement at end of input
